Ensure left alignment on mobile

--- a/src/components/Plan/PlanItem/PlanItem.scss
+++ b/src/components/Plan/PlanItem/PlanItem.scss
@@ -26,6 +26,7 @@
 
 .o-plan-item__inner-content {
     margin-top: 2em;
+    width: 100%;
     
     @include md {
         margin-top: 0;
